# LinuxPermissionHelp

./: README.md  whatalias.sh
FileEnc-OpenSSL/: README.md
catallx/: README.md  pyproject.toml
catallx/src/catallx/: __init__.py  cli.py
