[project]
name = "catallx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "supasuge", email = "epardo1742@proton.me" }
]
requires-python = ">=3.13"
dependencies = [
    "rich>=15.0.0",
    "textual>=8.2.4",
]

[project.scripts]
catallx = "catallx.cli:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
